package edu.fiuba.algo3.modelo;

public interface Salud {
    int tiempoDeRecuperacion();
    Salud recibirHeridaDeCuchillo();
}
